chore: fix z-index

--- a/src/discrete-layer/views/discrete-layer-view.css
+++ b/src/discrete-layer/views/discrete-layer-view.css
@@ -242,10 +242,6 @@ body[dir='rtl'] .tabHeaderContainer .filterByCatalogEntitySelect {
   margin-right: 0;
 }
 
-.cesium-viewer-fullscreenContainer , .cesium-viewer .bottomToolsContainer {
-  z-index: 0;
-}
-
 .interactionsDisabled {
   position: relative;
   overflow: hidden;
